# code-craze

./: .env  .env.template  .gitignore  CLAUDE.md  DEPLOYMENT_PLAN.md  IMPLEMENTATION_PLAN.md  MEMOIZE.md  Procfile  README.md  TASK.md  main.py  pyproject.toml  render.yaml  requirements.txt  restart.sh  start.sh  stop.sh
backend/: __init__.py  server.py
backend/api/: models.py  routes.py
backend/config/: settings.py
backend/database/: db.py  models.py  seed_data.py
backend/services/: adaptive_learning.py  competency_service.py
content/config/: topics.yaml
content/questions/: sample_questions.json
data/: code_craze.db
frontend/: index.html
frontend/components/: dashboard.js  practice.js  progress.js
frontend/styles/: main.css
frontend/utils/: api.js
